<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUP"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imagesign"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/img" />

    <EditText
        android:id="@+id/name"
        android:layout_below="@id/imagesign"
        style="@style/edittextStyle"
        android:hint="@string/full_name"/>

    <EditText
        android:id="@+id/email"
        android:layout_below="@id/name"
        style="@style/edittextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passS"
        android:layout_below="@id/email"
        style="@style/edittextStyle"
        android:inputType="textPassword"
        android:hint="@string/pass" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_below="@id/passS"
        android:layout_marginTop="20dp"
        style="@style/btnStyle"
        android:text="@string/sign_up"/>

</RelativeLayout>
