<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".APIs"
    android:background="@color/lightblue"
    android:padding="15dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc"
        android:gravity="center"
        android:text="@string/iso"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp" />


    <ImageView
        android:id="@+id/imgCountries"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:src="@drawable/img_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/btnCountries"
        android:text="@string/countries_api"
        app:layout_constraintTop_toBottomOf="@id/imgCountries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btnStyle"/>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/bigfourti"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCountries" />


    <ImageView
        android:id="@+id/imgCompanies"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/img_2"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/btnCompanies"
        android:text="@string/companies_api"
        app:layout_constraintTop_toBottomOf="@id/imgCompanies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btnStyle"/>


    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCompanies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btnStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>
